--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+		<script>$(document).foundation();</script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
