--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
   </head>
   <body ng-app="angulargitApp">
-    <!--[if lt IE 7]>
+    <!--[if lt IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
@@ -50,8 +50,8 @@
       </section>
     </nav>
 
-    <div>
-      <header class="row">
+    <div class="appArea">
+      <header class="appHeader row">
         <div class="medium-12 columns">
           <h1>'Allo, 'Allo!</h1>
           <p>
@@ -65,7 +65,7 @@
       <!-- Add your site or application content here -->
       <main role="main" class="row" ng-view=""></main>
 
-      <footer class="row">
+      <footer class="appFooter row">
         <div class="medium-12 columns">
           <p>from the Yeoman team</p>
         </div>
