updating links to new routes

--- a/app/index.html
+++ b/app/index.html
@@ -40,12 +40,12 @@
         <!-- Right Nav Section -->
         <ul class="right">
           <li class="has-dropdown">
-            <a href="#">About</a>
+            <a href="#/about">About</a>
             <ul class="dropdown">
               <li><a href="#">About Item 1</a></li>
             </ul>
           </li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#/contact">Contact</a></li>
           <li id="gConnect">
               <span class="g-signin"
                   data-scope="https://www.googleapis.com/auth/plus.login"
