--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,8 @@
 		    <script>$(document).foundation();</script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
 </html>
